fix: scrollbar css

--- a/src/styles/VirtualCollege.css
+++ b/src/styles/VirtualCollege.css
@@ -12,6 +12,7 @@
     margin: 31px auto 0;
     max-width: 100%;
     aspect-ratio: 766/538;
+    min-width: 70%;
 
 }
 
